--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -172,3 +172,51 @@ footer{
   background-color: #241E1E;
 
 }
+.cart{
+  position: fixed;
+  width: 40%;
+  top:150px;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding:15px;
+  margin:20px 0px;
+}
+.menu-item{
+  list-style: none;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding:15px;
+  margin:20px 0px;
+  .item{
+    font-family: "OilCan";
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  .price{
+    margin-left: 15px;
+    color: #241E1E;
+  }
+  p{
+    font-family: "American Typewriter";
+  }
+  button{
+    display: inline-block;
+  }
+}
+.cat-name{
+  font-family: "OilCan";
+  font-size: 40px;
+  text-transform: uppercase;
+  color: #93649C;
+  margin-bottom: 0px;
+}
+.cart-name{
+  font-family: "OilCan";
+  font-size: 35px;
+  text-transform: uppercase;
+  color: #93649C;
+  margin-top: 5px;
+  position: fixed;
+  top:130px;
+}
