--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -220,3 +220,12 @@ footer{
   position: fixed;
   top:130px;
 }
+ul{
+  padding-left: 0px;
+}
+.cart-item{
+  font-family: "OilCan";
+  font-size: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
