publish: cleaned up some code, added spp descritions
generated from commit 8398eb1b6bb0647c6ba9402358a78a807e793a11

--- a/css/app.css
+++ b/css/app.css
@@ -5947,4 +5947,13 @@ footer {
   position: fixed;
   top: 130px; }
 
+ul {
+  padding-left: 0px; }
+
+.cart-item {
+  font-family: "OilCan";
+  font-size: 15px;
+  font-weight: bold;
+  text-transform: uppercase; }
+
 /*# sourceMappingURL=app.css.map */
